# stm32-periph-utils

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md  STM32H523CEUX_RAM.ld
Core/Inc/: stm32h5xx_it.h
Core/Src/: UART_HW_CONFIG.h  main.c  stm32h5xx_it.c  usart.c
Drivers/: CMakeLists.txt
examples/stm32h523/: CMakeLists.txt  STM32H523CEUX_FLASH.ld
examples/stm32h523/Core/Src/: iwdg.c  main.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  tim.c
hardware/: lwrb.ioc
hardware/Drivers/: CMakeLists.txt
hardware/examples/stm32h523/Core/HAL_CONFIG/: stm32h5xx_hal_conf.h
hardware/examples/stm32h523/Core/Src/: UART_HW_CONFIG.h  gpio.c  main.c
hardware/lib/uartLib/: CMakeLists.txt  README.md
hardware/lib/uartLib/src/: uart_gpio_check.h  uart_it.c
hardware/lib/uartLib/src/user_layer/: uart-it.h  uart.c
lib/DmaMemToMemLib/: dmam2m.c  dmam2m.h
lib/uartCircularHw/: CMakeLists.txt
lib/uartCircularHw/src/: uartHW_HAL_it.c  uartHW_HAL_it.h  uart_gpio.c  uart_gpio_check.h  uart_it.c  uart_it.h
lib/uartCircularHw/src/user_layer/: UART_HW_CONFIG_template.h  uart.c  uart.h  uartHw.c  uartHw.h
lib/uartLib/: CMakeLists.txt  README.md
lib/uartLib/src/: uart_dma.h
lib/uartLib/src/user_layer/: UART_HW_CONFIG_template.h  uart.c  uart.h
tests/: CMakeLists.txt
tests/src/: sample1_test.cpp  serial.h
